# brave-core

./: .gitignore  BUILD.gn  DEPS  Jenkinsfile  README.md  onevn_paks.gni  onevn_repack_locales.gni  package-lock.json  package.json  tsconfig-lint.json  tsconfig.json  version.version
app/: BUILD.gn  app_management_strings.grdp  bookmarks_strings.grdp  brave_exe.ver  components_onevn_strings.grd  file_manager_strings.grdp  generated_resources.grd  md_extensions_strings.grdp  media_router_strings.grdp  nux_strings.grdp  onboarding_welcome_strings.grdp  onevn_command_ids.h  onevn_command_line_helper.cc  onevn_command_line_helper.h  onevn_command_line_helper_unittest.cc  onevn_exe.rc  onevn_exe.ver  onevn_generated_resources.grd  onevn_main_delegate.cc  onevn_main_delegate.h  onevn_main_delegate_browsertest.cc  onevn_strings.grd  printing_strings.grdp  profiles_strings.grdp  settings_onevn_strings.grdp  settings_strings.grdp  vr_strings.grdp
app/linux/: BUILD.gn
app/mac/: BUILD.gn
app/resources/: chromium_strings_am.xtb  chromium_strings_ar.xtb  chromium_strings_bg.xtb  chromium_strings_bn.xtb  chromium_strings_ca.xtb  chromium_strings_cs.xtb  chromium_strings_da.xtb  chromium_strings_de.xtb  chromium_strings_el.xtb  chromium_strings_en-GB.xtb  chromium_strings_es-419.xtb  chromium_strings_es.xtb  chromium_strings_et.xtb  chromium_strings_fa.xtb  chromium_strings_fi.xtb  chromium_strings_fil.xtb  chromium_strings_fr.xtb  chromium_strings_gu.xtb  chromium_strings_hi.xtb  chromium_strings_hr.xtb  chromium_strings_hu.xtb  chromium_strings_id.xtb  chromium_strings_it.xtb  chromium_strings_iw.xtb  chromium_strings_ja.xtb  chromium_strings_kn.xtb  chromium_strings_ko.xtb  chromium_strings_lt.xtb  chromium_strings_lv.xtb  chromium_strings_ml.xtb  chromium_strings_mr.xtb  chromium_strings_ms.xtb  chromium_strings_nl.xtb  chromium_strings_no.xtb  chromium_strings_pl.xtb  chromium_strings_pt-BR.xtb  chromium_strings_pt-PT.xtb  chromium_strings_ro.xtb  chromium_strings_ru.xtb  chromium_strings_sk.xtb  (+111 more)
app/strings/: components_chromium_strings_am.xtb  components_chromium_strings_ar.xtb  components_chromium_strings_bg.xtb  components_chromium_strings_bn.xtb  components_chromium_strings_ca.xtb  components_chromium_strings_cs.xtb  components_chromium_strings_da.xtb  components_chromium_strings_de.xtb  components_chromium_strings_el.xtb  components_chromium_strings_en-GB.xtb  components_chromium_strings_es-419.xtb  components_chromium_strings_es.xtb  components_chromium_strings_et.xtb  components_chromium_strings_fa.xtb  components_chromium_strings_fi.xtb  components_chromium_strings_fil.xtb  components_chromium_strings_fr.xtb  components_chromium_strings_gu.xtb  components_chromium_strings_hi.xtb  components_chromium_strings_hr.xtb  components_chromium_strings_hu.xtb  components_chromium_strings_id.xtb  components_chromium_strings_it.xtb  components_chromium_strings_iw.xtb  components_chromium_strings_ja.xtb  components_chromium_strings_kn.xtb  components_chromium_strings_ko.xtb  components_chromium_strings_lt.xtb  components_chromium_strings_lv.xtb  components_chromium_strings_ml.xtb  components_chromium_strings_mr.xtb  components_chromium_strings_ms.xtb  components_chromium_strings_nl.xtb  components_chromium_strings_no.xtb  components_chromium_strings_pl.xtb  components_chromium_strings_pt-BR.xtb  components_chromium_strings_pt-PT.xtb  components_chromium_strings_ro.xtb  components_chromium_strings_ru.xtb  components_chromium_strings_sk.xtb  (+12 more)
app/theme/: BUILD.gn  onevn_theme_resources.grd  onevn_unscaled_resources.grd
app/vector_icons/: BUILD.gn  vector_icons.cc.template  vector_icons.h.template
browser/: BUILD.gn  browser_context_keyed_service_factories.cc  browser_context_keyed_service_factories.h  onevn_browser_main_extra_parts.cc  onevn_browser_main_extra_parts.h  onevn_browser_main_loop.cc  onevn_browser_main_loop.h  onevn_browser_main_parts.cc  onevn_browser_main_parts.h  onevn_browser_main_parts_mac.h  onevn_browser_main_parts_mac.mm  onevn_browser_process_impl.cc  onevn_browser_process_impl.h  onevn_content_browser_client.cc  onevn_content_browser_client.h  onevn_content_browser_client_browsertest.cc  onevn_drm_tab_helper.cc  onevn_drm_tab_helper.h  onevn_features_browsertest.cc  onevn_local_state_prefs.cc  onevn_local_state_prefs.h  onevn_profile_prefs.cc  onevn_profile_prefs.h  onevn_profile_prefs_browsertest.cc  onevn_resources_browsertest.cc  onevn_resources_util_unittest.cc  onevn_scheme_load_browsertest.cc  onevn_stats_updater.cc  onevn_stats_updater.h  onevn_stats_updater_browsertest.cc  onevn_stats_updater_params.cc  onevn_stats_updater_params.h  onevn_stats_updater_unittest.cc  onevn_stats_updater_util.cc  onevn_stats_updater_util.h  onevn_tab_helpers.cc  onevn_tab_helpers.h  update_util.cc  update_util.h  version_info.cc  (+1 more)
common/: BUILD.gn  common_message_generator.cc  common_message_generator.h  network_constants.cc  network_constants.h  onevn_channel_info_browsertest.cc  onevn_channel_info_posix.cc  onevn_channel_info_posix.h  onevn_channel_info_unittest.cc  onevn_content_client.cc  onevn_content_client.h  onevn_content_client_unittest.cc  onevn_cookie_blocking.cc  onevn_cookie_blocking.h  onevn_paths.cc  onevn_paths.h  onevn_switches.cc  onevn_switches.h  pref_names.cc  pref_names.h  render_messages.h  resource_bundle_helper.cc  resource_bundle_helper.h  shield_exceptions.cc  shield_exceptions.h  shield_exceptions_unittest.cc  translate_network_constants.cc  translate_network_constants.h  url_constants.cc  url_constants.h  webui_url_constants.cc  webui_url_constants.h
content/: BUILD.gn
renderer/: BUILD.gn  onevn_content_renderer_client.cc  onevn_content_renderer_client.h  onevn_content_settings_observer.cc  onevn_content_settings_observer.h  onevn_content_settings_observer_autoplay_browsertest.cc  onevn_content_settings_observer_browsertest.cc  onevn_content_settings_observer_flash_browsertest.cc  onevn_content_settings_observer_helper.h
test/: BUILD.gn  testing.gni
utility/: BUILD.gn  onevn_content_utility_client.cc  onevn_content_utility_client.h
(+1546 files in other folders)
