import("//build/config/features.gni")
import("//build/config/locales.gni")
import("//tools/grit/grit_rule.gni")

source_set("command_ids") {
  sources = [
    "onevn_command_ids.h",
  ]
}

grit("onevn_generated_resources_grit") {
  source = "onevn_generated_resources.grd"
  output_dir = "$root_gen_dir/onevn"
  outputs = [
    "grit/onevn_generated_resources.h",
    # This is needed for the includes and not the localized messages
    "onevn_generated_resources.pak",
  ]

  foreach(locale, locales_with_fake_bidi) {
    outputs += [ "onevn_generated_resources_$locale.pak" ]
  }

  grit_flags = [
    "-E",
    "root_gen_dir=" + rebase_path(root_gen_dir, root_build_dir),
  ]

  deps = [
    "//onevn/components/services:onevn_content_manifest_overlays",
  ]
  resource_ids = "//onevn/browser/resources/resource_ids"
}

group("app") {}
