import("//onevn/build/config.gni")
import("//build/config/features.gni")
import("//third_party/widevine/cdm/widevine.gni")

source_set("browser_process") {
  sources = [
    "autocomplete/onevn_autocomplete_provider_client.cc",
    "autocomplete/onevn_autocomplete_provider_client.h",
    "autocomplete/onevn_autocomplete_scheme_classifier.cc",
    "autocomplete/onevn_autocomplete_scheme_classifier.h",
    "bookmarks/onevn_bookmark_client.cc",
    "bookmarks/onevn_bookmark_client.h",
    "onevn_browser_main_extra_parts.cc",
    "onevn_browser_main_extra_parts.h",
    "onevn_browser_main_parts.cc",
    "onevn_browser_main_parts.h",
    "onevn_browser_main_parts_mac.mm",
    "onevn_browser_main_parts_mac.h",
    "onevn_browser_process_impl.cc",
    "onevn_browser_process_impl.h",
    "onevn_drm_tab_helper.cc",
    "onevn_drm_tab_helper.h",
    "onevn_local_state_prefs.cc",
    "onevn_local_state_prefs.h",
    "onevn_profile_prefs.cc",
    "onevn_profile_prefs.h",
    "onevn_stats_updater.cc",
    "onevn_stats_updater.h",
    "onevn_stats_updater_params.cc",
    "onevn_stats_updater_params.h",
    "onevn_stats_updater_util.cc",
    "onevn_stats_updater_util.h",
    "onevn_tab_helpers.cc",
    "onevn_tab_helpers.h",
    "onevn_rewards/donations_dialog.cc",
    "onevn_rewards/donations_dialog.h",
    "browser_context_keyed_service_factories.cc",
    "browser_context_keyed_service_factories.h",
    "browsing_data/onevn_clear_browsing_data.cc",
    "browsing_data/onevn_clear_browsing_data.h",
    "component_updater/onevn_component_installer.cc",
    "component_updater/onevn_component_installer.h",
    "component_updater/onevn_component_updater_configurator.cc",
    "component_updater/onevn_component_updater_configurator.h",
    "component_updater/onevn_crx_update_service.cc",
    "component_updater/onevn_crx_update_service.h",
    "content_settings/onevn_cookie_settings_factory.cc",
    "content_settings/onevn_cookie_settings_factory.h",
    "geolocation/onevn_geolocation_permission_context.cc",
    "geolocation/onevn_geolocation_permission_context.h",
    "mac/sparkle_glue.mm",
    "mac/sparkle_glue.h",
    "mac/su_updater.h",
    "metrics/metrics_reporting_util.cc",
    "metrics/metrics_reporting_util.h",
    "search_engines/guest_window_search_engine_provider_service.cc",
    "search_engines/guest_window_search_engine_provider_service.h",
    "search_engines/private_window_search_engine_provider_service.cc",
    "search_engines/private_window_search_engine_provider_service.h",
    "search_engines/search_engine_provider_service_factory.cc",
    "search_engines/search_engine_provider_service_factory.h",
    "search_engines/search_engine_provider_util.cc",
    "search_engines/search_engine_provider_util.h",
    "search_engines/tor_window_search_engine_provider_service.cc",
    "search_engines/tor_window_search_engine_provider_service.h",
    "search_engines/search_engine_provider_service.cc",
    "search_engines/search_engine_provider_service.h",
    "update_util.cc",
    "update_util.h",
  ]

  deps = [
    ":version_info",
    "//base",
    "//onevn/browser/tor",
    "//onevn/common",
    "//onevn/components/onevn_ads/browser",
    "//onevn/components/onevn_rewards/browser",
    "//onevn/components/onevn_shields/browser:onevn_shields",
    "//onevn/components/onevn_sync",
    "//onevn/components/onevn_webtorrent/browser",
    "//onevn/components/content_settings/core/browser",
    "//onevn/components/services:onevn_content_manifest_overlays",
    "//chrome/common",
    "//components/browsing_data/core",
    "//components/component_updater",
    "//components/prefs",
    "//components/safe_browsing/common:safe_browsing_prefs",
    "//components/search_engines",
    "//components/spellcheck/browser",
    "//content/public/browser",
    "//onevn/chromium_src:browser",
    "themes",
    "//third_party/widevine/cdm:buildflags",
  ]

  if (bundle_widevine_cdm || enable_widevine_cdm_component) { deps += [ "//onevn/browser/widevine" ] }

  if (is_win && is_official_build) {
    sources += [
      "//chrome/browser/google/google_update_win.cc",
      "//chrome/browser/google/google_update_win.h",
    ]

    deps += [
      "//google_update",
    ]
  }
}

source_set("version_info") {
  # these are only for version_info.cc and should not be exposed as public configs
  configs += [ "//onevn/build:version" ]
  defines = [
    "ONEVN_BROWSER_VERSION=\"$onevn_version\"",
  ]

  sources = [
    "version_info.cc",
    "version_info.h",
  ]
}

source_set("browser") {
  sources = [
    "onevn_content_browser_client.cc",
    "onevn_content_browser_client.h",
  ]

  deps = [
    "autoplay",
    "//base",
    "//onevn/components/onevn_ads/browser",
    "//onevn/components/onevn_referrals/browser",
    "//onevn/components/onevn_rewards/browser",
    "//onevn/components/onevn_shields/browser:onevn_shields",
    "//onevn/components/onevn_webtorrent/browser",
    "//onevn/components/resources",
    "//chrome/browser",
    "//content/public/browser",
    "//content/public/common",
    "//services/service_manager/embedder",
    "download",
    "extensions",
    "importer",
    "net",
    "permissions",
    "profiles",
    "renderer_context_menu",
    "renderer_host",
    "tor",
    "ui",
    "//ui/base",
  ]

  if (is_mac) {
    deps += [
      "//onevn/vendor/sparkle:sparkle_framework_bundle_data"
    ]
  }
}
