import("//build/util/branding.gni")

source_set("channel_info") {
  if (is_linux) {
    sources = [
      "onevn_channel_info_posix.cc",
      "onevn_channel_info_posix.h",
    ]

    configs += [
      "//onevn/build/linux:linux_channel_names",
    ]
  }
}

source_set("pref_names") {
  sources = [
    "pref_names.cc",
    "pref_names.h",
  ]
}

source_set("common") {
  sources = [
    "onevn_content_client.cc",
    "onevn_content_client.h",
    "onevn_switches.cc",
    "onevn_switches.h",
    "importer/onevn_referral.cc",
    "importer/onevn_referral.h",
    "importer/imported_browser_window.cc",
    "importer/imported_browser_window.h",
    "webui_url_constants.cc",
    "webui_url_constants.h",
  ]

  if (!is_android) {
    sources += [
      "onevn_paths.cc",
      "onevn_paths.h",
      "common_message_generator.cc",
      "common_message_generator.h",
      "extensions/onevn_extensions_api_provider.cc",
      "extensions/onevn_extensions_api_provider.h",
      "extensions/extension_constants.cc",
      "extensions/extension_constants.h",
      "extensions/manifest_handlers/pdfjs_manifest_override.cc",
      "extensions/manifest_handlers/pdfjs_manifest_override.h",
      "importer/onevn_importer_utils.cc",
      "importer/onevn_importer_utils.h",
      "importer/onevn_ledger.cc",
      "importer/onevn_ledger.h",
      "importer/onevn_stats.h",
      "importer/chrome_importer_utils.cc",
      "importer/chrome_importer_utils.h",
      "network_constants.cc",
      "network_constants.h",
      "resource_bundle_helper.cc",
      "resource_bundle_helper.h",
      "translate_network_constants.cc",
      "translate_network_constants.h",
      "url_constants.cc",
      "url_constants.h",
    ]

    public_deps = [
      "extensions/api",
    ]
  }

  deps = [
    ":onevn_cookie_blocking",
    ":pref_names",
    ":shield_exceptions",
    "//onevn/chromium_src:common",
    "//content/public/common",
  ]

  if (is_mac) {
    sources += [
      "importer/onevn_importer_utils_mac.mm",
      "importer/chrome_importer_utils_mac.mm",
    ]
  }

  if (is_linux) {
    sources += [
      "importer/onevn_importer_utils_linux.cc",
      "importer/chrome_importer_utils_linux.cc",
    ]
  }

  if (is_win) {
    sources += [
      "importer/onevn_importer_utils_win.cc",
      "importer/chrome_importer_utils_win.cc",
    ]
  }
}


source_set("onevn_cookie_blocking") {
  sources = [
    "onevn_cookie_blocking.cc",
    "onevn_cookie_blocking.h",
  ]
}

source_set("shield_exceptions") {
  sources = [
    "shield_exceptions.cc",
    "shield_exceptions.h",
  ]
}

config("constants_configs") {
  defines = []
  if (is_mac) {
    defines += [
      "ONEVN_PRODUCT_STRING=\"$chrome_product_full_name\"",
    ]
  }
}
