source_set("common") {
  sources = [
    "common/content_message_generator.cc",
    "common/content_message_generator.h",
  ]

  deps = [
    "//ipc"
  ]
}

source_set("browser") {
  sources = [
    "browser/webui/onevn_shared_resources_data_source.cc",
    "browser/webui/onevn_shared_resources_data_source.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//onevn/ui/webui/resources",
    "//ui/base",
  ]
}