import("//build/config/features.gni")

source_set("renderer") {
  sources = [
    "onevn_content_renderer_client.cc",
    "onevn_content_renderer_client.h",
    "onevn_content_settings_observer.cc",
    "onevn_content_settings_observer.h",
  ]

  deps = [
    "//chrome/renderer",
    "//skia",
    "//third_party/blink/public:blink",
    "//onevn/chromium_src:renderer",
    "//onevn/content:common",
  ]
}
