import("//onevn/components/onevn_ads/browser/buildflags/buildflags.gni")
import("//onevn/components/onevn_rewards/browser/buildflags/buildflags.gni")
import("//build/config/features.gni")
import("//build/config/ui.gni")

source_set("utility") {
  sources = [
    "onevn_content_utility_client.cc",
    "onevn_content_utility_client.h",
    "importer/onevn_external_process_importer_bridge.cc",
    "importer/onevn_external_process_importer_bridge.h",
    "importer/onevn_importer.cc",
    "importer/onevn_importer.h",
    "importer/chrome_importer.cc",
    "importer/chrome_importer.h",
    "importer/firefox_importer.cc",
    "importer/firefox_importer.h",
  ]

  defines = []
  deps = [
    "tor",
    "//onevn/components/services/bat_ledger:lib",
    "//chrome/common",
    "//chrome/utility",
    "//content/public/common",
    "//components/password_manager/core/browser",
  ]

  if (onevn_ads_enabled) {
    deps += [ "//onevn/components/services/bat_ads:lib" ]
  }

  if (onevn_rewards_enabled) {
    configs += [ "//onevn/vendor/bat-native-ledger:internal_config" ]
  }

  if (use_glib) {
    defines += [ "USE_LIBSECRET" ]
    deps += [ "//third_party/libsecret" ]
  }
}
