import("//build/util/branding.gni")
import("//onevn/build/config.gni")
import("//media/cdm/library_cdm/cdm_paths.gni")

action("generate_breakpad_symbols") {
  symbols_dir = "$onevn_dist_dir/$onevn_project_name.breakpad.syms"
  outputs = [
    symbols_dir
  ]

  args = [
    "--symbols-dir=" + rebase_path(symbols_dir),
    "--jobs=16",
    "--build-dir=" + rebase_path(root_out_dir),
    rebase_path(root_out_dir)
  ]

  script = "//onevn/tools/win/generate_breakpad_symbols.py"

  deps = [
    "//third_party/breakpad:dump_syms",
    "//onevn/build/win:copy_pdb",
  ]
}

group("symbol_dist_resources") {
  public_deps = [ ":generate_breakpad_symbols" ]
}

copy("dist_resources") {
  sources = [
    "$root_out_dir/chrome_elf.dll",
  ]

  outputs = [
    "$onevn_dist_dir/{{source_file_part}}",
  ]

  public_deps = [
    "//chrome_elf",
    "//third_party/angle:copy_compiler_dll",
  ]
}

group("chromedriver_dist_resources") {}
