source_set("devtools") {
  if (!is_android) {
    sources = [
      "onevn_devtools_ui_bindings.cc",
      "onevn_devtools_ui_bindings.h",
    ]

    deps = [
      "//base",
      "//onevn/browser/themes",
      "//chrome/browser/devtools",
      "//chrome/common",
      "//components/prefs",
    ]
  }
}
