import("//build/config/features.gni")

source_set("extensions") {
  sources = [
    "api/rewards_notifications_api.cc",
    "api/rewards_notifications_api.h",
    "api/onevn_rewards_api.cc",
    "api/onevn_rewards_api.h",
    "api/onevn_shields_api.cc",
    "api/onevn_shields_api.h",
    "api/onevn_sync_api.cc",
    "api/onevn_sync_api.h",
    "api/onevn_sync_event_router.cc",
    "api/onevn_sync_event_router.h",
    "api/onevn_theme_api.cc",
    "api/onevn_theme_api.h",
    "api/settings_private/onevn_prefs_util.cc",
    "api/settings_private/onevn_prefs_util.h",
    "onevn_component_extension.cc",
    "onevn_component_extension.h",
    "onevn_component_extension_resource_manager.cc",
    "onevn_component_extension_resource_manager.h",
    "onevn_component_loader.cc",
    "onevn_component_loader.h",
    "onevn_extensions_browser_api_provider.cc",
    "onevn_extensions_browser_api_provider.h",
    "onevn_extension_install_prompt.cc",
    "onevn_extension_install_prompt.h",
    "onevn_extension_management.cc",
    "onevn_extension_management.h",
    "onevn_extension_provider.cc",
    "onevn_extension_provider.h",
    "onevn_extension_service.cc",
    "onevn_extension_service.h",
    "onevn_theme_event_router.cc",
    "onevn_theme_event_router.h",
    "onevn_tor_client_updater.cc",
    "onevn_tor_client_updater.h",
    "updater/onevn_update_client_config.cc",
    "updater/onevn_update_client_config.h"
  ]

  deps = [
    "//base",
    "//onevn/common:pref_names",
    "//onevn/common/extensions/api",
    "//onevn/components/onevn_extension:static_resources",
    "//onevn/components/onevn_extension:generated_resources",
    "//onevn/components/onevn_rewards/resources/extension:extension_generated_resources",
    "//onevn/components/onevn_rewards/resources/extension:static_resources",
    "//onevn/components/onevn_sync",
    "//onevn/components/onevn_sync:generated_resources",
    "//onevn/components/onevn_sync:static_resources",
    "//onevn/components/onevn_webtorrent:generated_resources",
    "//onevn/components/onevn_webtorrent:static_resources",
    "//chrome/browser",
    "//components/prefs",
    "//content/public/browser",
    "//extensions/browser",
    "//extensions/common",
  ]
}
